Setting up project configuration
- Adding example .env file with sanity token env var
- Adding typescript, source-sanity, sass, and tailwind plugins

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -620,3 +620,14 @@ pre tt:after {
     font-size: 100%;
   }
 }
+@apply bg-center;
+@screen sm {
+  a {
+    color: white;
+  }
+}
+a {
+  &:hover {
+    background: #000;
+  }
+}
