Putting finishing touches on projects section
- Changing the header button to the Projects section to a Link
- Creating project component for displaying projects as cards
- Making the tag component reusable so we don't have to re-create it for project cards
- Adding some custom tailwind classes since the VSCode throws errors when we reference Tailwind classes with the "/" character

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -95,6 +95,7 @@
   .nav-button {
     @apply bg-white;
     @apply border-none;
+    @apply no-underline;
     @apply py-2;
     @apply px-4;
     @apply rounded;
