Adding Hero section
- Adding a hero section to the portfolio homepage
- Adding an additional screen setting, 2xl, that represents desktop viewport

--- a/src/components/projects-section/projects-section.scss
+++ b/src/components/projects-section/projects-section.scss
@@ -1,5 +1,6 @@
 .projects-section-container {
-  @apply py-12;
+  @apply pt-6;
+  @apply pb-12;
   // RESPONSIVE START
   @apply px-3;
   // RESPONSIVE END
