Add no project results message
Adding a no project results message if the user selected a combination of tags that do not show any projects.

--- a/src/components/projects-section/projects/projects.scss
+++ b/src/components/projects-section/projects/projects.scss
@@ -1,4 +1,9 @@
 .projects-container {
   @apply flex;
   @apply flex-wrap;
+  .no-results {
+    @apply text-center;
+    @apply text-xl;
+    @apply w-full;
+  }
 }
