Building out the individual Project page
- Adding a Link Icon
- Adding support for reusing individual tags on the project page
- Building out the individual Project page
- Adding support for 85% width in tailwind.config

--- a/src/components/projects-section/tags/tag/tag.scss
+++ b/src/components/projects-section/tags/tag/tag.scss
@@ -15,8 +15,14 @@
     @apply text-lg;
   }
   &:hover, .project-tags-container & {
-    @apply bg-blue-100;
     @apply cursor-pointer;
+  }
+  &:hover, .project-tags-container &, .content-text & {
+    @apply bg-blue-100;
+  }
+  .content-text & {
+    @apply border-none;
+    @apply cursor-default;
   }
   &.selected {
     @apply bg-blue-900;
