Keeping the header buttons from staying active after click on mobile phone.

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -104,11 +104,13 @@
     @apply transition-all;
     @apply duration-150;
     &:hover {
-      @apply bg-blue-900;
-      @apply cursor-pointer;
-      @apply text-white;
-      @apply transition-all;
-      @apply duration-150;
+      @screen sm {
+        @apply bg-blue-900;
+        @apply cursor-pointer;
+        @apply text-white;
+        @apply transition-all;
+        @apply duration-150;
+      }
     }
     &:not(:first-child) {
       @apply ml-2;
